--- a/manager/manager/build.gradle
+++ b/manager/manager/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'jakarta.validation:jakarta.validation-api'
 	runtimeOnly 'org.postgresql:postgresql'
 
 }
