--- a/manager/manager/build.gradle
+++ b/manager/manager/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'jakarta.validation:jakarta.validation-api'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.hibernate.validator:hibernate-validator'
 	runtimeOnly 'org.postgresql:postgresql'
 
 }
