--- a/manager/manager/src/main/resources/application.yml
+++ b/manager/manager/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
           auth: true
           starttls:
             enable: true
-            required: trueō
+            required: true
 
 server:
   port: 8080
